# fallout-in-godot

./: .gitignore  README.md
gdFallout/: gdFallout.gdextension  icon.svg.import  project.godot
gdFallout/Scenes/: DudeSprite.gd  Main.tscn  playerscene.tscn
gdFallout/Scripts/: Player.gd
gd_fallout_ext/: Cargo.toml
gd_fallout_ext/src/: assets.rs  dude.rs  fs.rs  lib.rs
gd_fallout_ext/src/fs/: inifile.rs  stdfs.rs
