[package]
name = "gd_fallout_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
enum-as-inner = "0"                                                          # copied from vault13
enumflags2 = "0.7"                                                           # copied from vault13
enum-map = "0.4"                                                             # copied from vault13
enum-map-derive = "0.4"                                                      # copied from vault13
enum-primitive-derive = "0.2"                                                #copied from vault13
num-traits = "0.2.15"                                                        # copied from vault13
btoi = "0.4"                                                                 # copied from vault13
vault13 = { git = "https://github.com/pingw33n/vault13", branch = "master" }
log = "0.4"                                                                  # copied from vault13
log4rs = "1.2.0"
rust-ini = "0.19.0"                                                          # copied from vault13
clap = "2"                                                                   #copied from vault13
byteorder = "1.2"                                                            # copied from vault13
flate2 = "1"                                                                 # copied from vault13
